# discord-IA-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
