[project]
name = "oreabot"
version = "0.1.0"
description = "bot ai do oreaseca desenrolado"
authors = [
    {name = "Kameil"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "google-generativeai (>=0.8.4,<0.9.0)",
    "discord (>=2.3.2,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
